files/manifests/dap/dapAccessManifest.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dap-access-node
  namespace: dap
  labels:
    app: cyberark
spec:
  replicas: 1
  selector:
    matchLabels:
      role: access
  template:
    metadata:
      labels:
        role: access
    spec:
      serviceAccountName: conjur-cluster
      volumes:
      - name: seedfile
        emptyDir:
          medium: Memory
      - name: conjur-token
        emptyDir:
          medium: Memory
      containers:
      - name: node
        imagePullPolicy: IfNotPresent
        image: captainfluffytoes/dap:11.4.0
        command: ["/tmp/seedfile/start-follower.sh"]
        ports:
          - containerPort: 443
            protocol: TCP
          - containerPort: 5432
            protocol: TCP
          - containerPort: 1999
            protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 443
            scheme: HTTPS
          initialDelaySeconds: 15
          timeoutSeconds: 5
        volumeMounts:
          - name: seedfile
            mountPath: /tmp/seedfile
            readOnly: true
        resources:
          requests:
            memory: "1Gi"
            cpu: "250m"
          limits:
            memory: "2Gi"
            cpu: "500m"
            
---
apiVersion: v1
kind: Service
metadata:
  name: access
  namespace: dap
spec:
  ports:
  - name: https
    port: 443
    targetPort: 443
  selector:
    role: access
  type: ClusterIP
