files/manifests/dap/dapSourceManifest.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dap-source-node
  namespace: dap
  labels:
    app: cyberark
spec:
  replicas: 1
  selector:
    matchLabels:
      role: source
  template:
    metadata:
      labels:
        role: source
    spec:
      containers:
      - name: node
        imagePullPolicy: IfNotPresent
        image: captainfluffytoes/dap:10.10
        ports:
          - containerPort: 443
            protocol: TCP
          - containerPort: 5432
            protocol: TCP
          - containerPort: 1999
            protocol: TCP
        resources:
          requests:
            memory: "1Gi"
            cpu: "250m"
          limits:
            memory: "2Gi"
            cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: source
  namespace: dap
spec:
  ports:
  - name: https
    nodePort: 30443
    port: 443
    targetPort: 443
  - name: postgres
    port: 5432
    targetPort: 5432
  selector:
    role: source
  type: NodePort

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dapwebpage
  namespace: dap
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: dap.k8scluster.local
    http:
      paths:
      - path: /
        backend:
          serviceName: source
          servicePort: 443
